<resources>
    <string name="app_name">Railway Enquiry</string>
    <string name="email_error">Invalid Email</string>
    <string name="name_error">Invalid Name</string>
    <string name="password_error">Invalid Password</string>
    <string name="email_text">E-MAIL</string>
    <string name="password_text">PASSWORD</string>
    <string name="login_text">LOGIN</string>
    <string name="submit_text">SUBMIT</string>
    <string name="name_text">NAME</string>
    <string name="get_text">GET STATUS</string>
    <string name="register_text"><u>SIGNUP</u></string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="welcome_text">Welcome to Railway Enquiry!</string>
    <string name="create_account">CREATE NEW ACCOUNT</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="signup_with_facebook">Sign Up with Facebook</string>
    <string name="or_text">OR</string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="user_already_registered">User Already Registered</string>
    <string name="select_any_one">Select Any One</string>
    <string name="camera">Take a Picture</string>
    <string name="gallery">Import from Gallery</string>
    <string name="common_error">Something went wrong, please try again!!</string>
    <string name="internet_connection">Please check your internet connection and try again!</string>
    <string name="try_again">Please try again.</string>
    <string name="scheduled">Scheduled</string>
    <string name="actual_arrival">Act./Exp.*</string>
    <string name="delay">Delay</string>
    <string name="settings_menu">Settings</string>
    <string name="change_picture">CHANGE PICTURE</string>
    <string name="save">SAVE</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset">RESET</string>
    <string name="change_password_msg">Password changed successfully!!</string>
    <string name="settings_unchanged_message">Same details as previous one!!</string>
    <string name="settings_success_message">Profile updated successfully.</string>
    <string name="reload"><u>Reload</u></string>
    <string name="logout_user">Logout</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="forgot_password_message">Please provide the registered email id.
        An email will be sent to you which will contain new password.
        You can change your password in settings tab after logging in! </string>
    <string name="chart_prepared">Chart is prepared</string>
    <string name="chart_not_prepared">Chart is not prepared</string>
    <string name="check_status">Click on a station to know the live train status !</string>
    <string name="passenger_no">Passenger</string>
    <string name="booking_status">Booking Status</string>
    <string name="current_status">Current Status</string>
    <string name="add_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="api_not_working">Api not Working</string>
    <string name="invalid_pnr">Enter valid PNR</string>
    <string name="send">SEND</string>
    <string name="bug_reported_successfully">Bug Reported Successfully</string>
    <string name="empty_bug_message">Bug Message Empty</string>
    <string name="bug_message">Report bug</string>
    <string name="enter_bug">Please type your message here..</string>
    <string name="train_no_error">Please enter a valid train no.</string>
    <string name="enter_pnr">Enter PNR</string>
    <string name="submit">Submit</string>
    <string name="invalid_trainno">Invalid Train No.</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_code">Invalid Code</string>

    <string name="save_pnr"><u>Save this pnr</u></string>
    <string name="success_pnr_saved"><u>Pnr saved successfully</u></string>
    <string name="saved_pnrs">Saved PNR</string>
    <string name="delete_pnrs">Delete PNR\'s</string>
    <string name="saved_pnrs_message">Click on the PNR no to know the status</string>
    <string name="no_saved_pnrs_message">You don\'t have any saved pnr.</string>
    <string name="pnr_delete_success_message">Pnr\'s deleted successfully!!</string>

</resources>
