<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="40sp">


            <com.test.naimish.railapp.Views.BoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/change_password"
                android:textColor="@color/fbutton_color_pomegranate"
                android:textSize="25sp"/>

            <com.test.naimish.railapp.Views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/old_password"
                android:textColor="@color/fbutton_color_pomegranate"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/ubuntu_light"
                android:textSize="20sp"/>


            <com.test.naimish.railapp.Views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/new_password"
                android:textColor="@color/fbutton_color_pomegranate"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/ubuntu_light"
                android:textSize="20sp"/>

            <com.test.naimish.railapp.Views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/confirm_new_password"
                android:textColor="@color/fbutton_color_pomegranate"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/comfirm_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/ubuntu_light"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/comfirm_new_password_button"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginBottom="35sp"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_marginTop="25sp"
                android:background="@drawable/settings_btn_background"
                android:text="@string/reset"
                android:textColor="@color/fbutton_color_pomegranate"/>



</LinearLayout>