<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">


    <LinearLayout
        android:id="@+id/linearLayout_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.test.naimish.railapp.Views.BoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="0dp"
            android:textColor="@color/black"
            android:text="@string/select_any_one"
            android:textSize="25dp"/>

        <com.test.naimish.railapp.Views.LightTextView
            android:id="@+id/option_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/black"
            android:clickable="true"
            android:text="@string/camera"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorLightGrey"/>


        <com.test.naimish.railapp.Views.LightTextView
            android:id="@+id/option_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:clickable="true"
            android:textColor="@color/black"
            android:text="@string/gallery"
            android:textSize="20dp"/>

    </LinearLayout>


</RelativeLayout>