<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rail"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingTop="25sp">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginTop="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:typeface="serif"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginVertical="30dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/landing_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/railapp_btn_unselected"
            android:fontFamily="@font/ubuntu_light"
            android:padding="5dp"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/landing_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/railapp_btn_unselected"
            android:fontFamily="@font/ubuntu_light"
            android:padding="5dp"
            android:text="@string/register_text"
            android:textColor="@color/white"
            android:textSize="20sp"/>

    </LinearLayout>


</RelativeLayout>