<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:alpha="0.7"
    android:background="@drawable/rail"
    android:padding="60dp"
    android:scrollIndicators="left">

    <android.support.v7.widget.CardView

        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25sp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6sp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="25dp">

            <LinearLayout
                android:id="@+id/ll_facebook_signup"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20sp"
                android:background="@drawable/facebook_button_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook_icon" />

                <TextView
                    android:id="@+id/tv_facebook_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical"
                    android:paddingTop="2dp"
                    android:text="Sign Up with Facebook"

                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/signup_with_facebook"
                    android:textColor="@color/white" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorLightGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10sp"
                    android:text="@string/or_text" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorLightGrey" />

            </LinearLayout>

        <com.test.naimish.railapp.Views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/email_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

        <com.test.naimish.railapp.Views.LightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/password_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/fbutton_color_wet_asphalt"
            android:text="@string/login_text"
            android:textColor="@color/white"
            android:textSize="20sp"

            />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</ScrollView>