<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rail"
    android:paddingTop="40sp">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="100sp"
        app:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingLeft="25sp"
            android:paddingRight="25sp">

            <com.test.naimish.railapp.Views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email_text"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/forgot_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:inputType="textEmailAddress"
                android:maxLines="2"
                android:textSize="20sp" />

            <com.test.naimish.railapp.Views.LightTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password_message"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />


            <Button
                android:id="@+id/forgot_password_button"
                android:layout_width="match_parent"
                android:layout_height="35sp"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="25sp"
                android:layout_marginRight="25sp"
                android:layout_marginTop="25sp"
                android:background="@drawable/signup_buttons_background"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/submit_text"
                android:textColor="@color/fbutton_color_peter_river" />


        </LinearLayout>


    </android.support.v7.widget.CardView>

</ScrollView>